Refaktorert pga Sonar-trivia ++