@@ -3,12 +3,12 @@ package no.nav.registre.orgnrservice.service;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import no.nav.registre.orgnrservice.adapter.OrgnummerAdapter;
+import no.nav.registre.orgnrservice.consumer.OrganisasjonConsumer;
 import org.springframework.scheduling.annotation.EnableScheduling;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Component;
 
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 @Slf4j
 @EnableScheduling
@@ -18,6 +18,7 @@ public class CronJobService {
 
     private static final int OENSKET_ANTALL = 1000;
     private final OrgnummerService orgnummerService;
+    private final OrganisasjonConsumer organisasjonConsumer;
     private final OrgnummerAdapter orgnummerAdapter;
 
     @Scheduled(cron = "0 0 20 * * *")
@@ -35,8 +36,9 @@ public class CronJobService {
     public void checkMiljoe() {
         var alle = orgnummerAdapter.hentAlleLedige();
         alle.stream()
-            .map(org -> orgnummerService.finnesOrgnrIMiljoe(org.getOrgnummer()) ? org.getOrgnummer() : null)
-            .filter(Objects::nonNull).collect(Collectors.toList())
-            .forEach(orgnummerAdapter::deleteByOrgnummer);
+                .map(org -> organisasjonConsumer.finnesOrgnrIEreg(org.getOrgnummer()) ? org.getOrgnummer() : null)
+                .filter(Objects::nonNull)
+                .toList()
+                .forEach(orgnummerAdapter::deleteByOrgnummer);
     }
 }
